--- a/spec/fixtures/vcr_cassettes/account_info.yml
+++ b/spec/fixtures/vcr_cassettes/account_info.yml
@@ -23,25 +23,25 @@ http_interactions:
       X-Ua-Compatible:
       - IE=Edge
       Etag:
-      - ! '"d5311e1d8241b0c6d17b27768cc839e1"'
+      - ! '"108135fed6135342e058ab4865b5301f"'
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 39059555c60af9d541a8cb2c437fd361
+      - 3f36878be082fdb201b2015c688aa367
       X-Runtime:
-      - '0.011578'
+      - '0.112629'
       Server:
       - WEBrick/1.3.1 (Ruby/1.9.3/2012-11-10)
       Date:
-      - Sun, 07 Jul 2013 19:24:02 GMT
+      - Sun, 07 Jul 2013 22:46:58 GMT
       Content-Length:
-      - '144'
+      - '177'
       Connection:
       - Keep-Alive
     body:
       encoding: US-ASCII
-      string: ! '{"id":8,"created_at":"2013-07-05T22:14:10Z","credits":27837,"notification_url":"http://localhost:3000","time_zone":"Eastern
-        Time (US & Canada)"}'
+      string: ! '{"id":8,"created_at":"2013-07-05T22:14:10Z","credits":27836,"notification_url":"http://localhost:3000","time_zone":"Eastern
+        Time (US & Canada)","max_file_size_in_bytes":1048576}'
     http_version: 
-  recorded_at: Sun, 07 Jul 2013 19:24:02 GMT
+  recorded_at: Sun, 07 Jul 2013 22:46:58 GMT
 recorded_with: VCR 2.4.0
