--- a/spec/fixtures/vcr_cassettes/account_info.yml
+++ b/spec/fixtures/vcr_cassettes/account_info.yml
@@ -44,4 +44,47 @@ http_interactions:
         Time (US & Canada)","max_file_size_in_bytes":1048576}'
     http_version: 
   recorded_at: Sun, 07 Jul 2013 22:46:58 GMT
+- request:
+    method: get
+    uri: http://fileturn.net/api/users.json?token=67sFfjudMpXxJeioQcPSppYkoVdQD1oetqPWzMAh
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.7
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - ! '*/*'
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Date:
+      - Wed, 10 Jul 2013 02:23:45 GMT
+      Status:
+      - 401 Unauthorized
+      X-Rack-Cache:
+      - miss
+      X-Request-Id:
+      - ba809a4faf572e1c93137e8dec3e5ed4
+      X-Runtime:
+      - '0.011111'
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: ! '{"error":"Your token is invalid","status":401}'
+    http_version: 
+  recorded_at: Wed, 10 Jul 2013 02:26:15 GMT
 recorded_with: VCR 2.4.0
