--- a/spec/fixtures/vcr_cassettes/file_convert_no_params.yml
+++ b/spec/fixtures/vcr_cassettes/file_convert_no_params.yml
@@ -41,4 +41,47 @@ http_interactions:
       string: ! '{"errors":{"url":["can''t be blank"],"convert_to":["can''t be blank"]}}'
     http_version: 
   recorded_at: Sun, 07 Jul 2013 22:46:58 GMT
+- request:
+    method: post
+    uri: http://fileturn.net/api/files.json?token=67sFfjudMpXxJeioQcPSppYkoVdQD1oetqPWzMAh
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.7
+      Content-Length:
+      - '0'
+      Accept:
+      - ! '*/*'
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Date:
+      - Wed, 10 Jul 2013 02:23:46 GMT
+      Status:
+      - 401 Unauthorized
+      X-Rack-Cache:
+      - invalidate, pass
+      X-Request-Id:
+      - fc1e6601526edcd56153258f170f282f
+      X-Runtime:
+      - '0.011877'
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: ! '{"error":"Your token is invalid","status":401}'
+    http_version: 
+  recorded_at: Wed, 10 Jul 2013 02:26:16 GMT
 recorded_with: VCR 2.4.0
