--- a/spec/fixtures/vcr_cassettes/file_convert_success.yml
+++ b/spec/fixtures/vcr_cassettes/file_convert_success.yml
@@ -43,4 +43,47 @@ http_interactions:
       string: ! '{"id":611,"url":"http://test.com","convert_to":"pdf","created_at":"2013-07-07T22:46:58Z","status":"queued","download_url":"","notifications":[]}'
     http_version: 
   recorded_at: Sun, 07 Jul 2013 22:46:58 GMT
+- request:
+    method: post
+    uri: http://fileturn.net/api/files.json?convert_to=pdf&token=67sFfjudMpXxJeioQcPSppYkoVdQD1oetqPWzMAh&url=http://test.com
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.7
+      Content-Length:
+      - '0'
+      Accept:
+      - ! '*/*'
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Date:
+      - Wed, 10 Jul 2013 02:23:46 GMT
+      Status:
+      - 401 Unauthorized
+      X-Rack-Cache:
+      - invalidate, pass
+      X-Request-Id:
+      - 4859cd7268f9b0e546de5f75d0ee3f8f
+      X-Runtime:
+      - '0.013926'
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: ! '{"error":"Your token is invalid","status":401}'
+    http_version: 
+  recorded_at: Wed, 10 Jul 2013 02:26:16 GMT
 recorded_with: VCR 2.4.0
