--- a/spec/fixtures/vcr_cassettes/file_upload_not_enough_credits.yml
+++ b/spec/fixtures/vcr_cassettes/file_upload_not_enough_credits.yml
@@ -84,4 +84,47 @@ http_interactions:
       string: ! '{"uploads":[],"total_uploads":0,"current_page":1,"per_page":20,"total_pages":0}'
     http_version: 
   recorded_at: Sun, 07 Jul 2013 22:46:59 GMT
+- request:
+    method: get
+    uri: http://fileturn.net/api/users.json?token=vGAMKzyN1pFGCNcCFsPpjjVVZtvim1zop3te2pQU
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.7
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - ! '*/*'
+  response:
+    status:
+      code: 401
+      message: Unauthorized
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Date:
+      - Wed, 10 Jul 2013 02:23:47 GMT
+      Status:
+      - 401 Unauthorized
+      X-Rack-Cache:
+      - miss
+      X-Request-Id:
+      - c5a953f6afa289036ea7cc90d86a2dd0
+      X-Runtime:
+      - '0.006471'
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+    body:
+      encoding: US-ASCII
+      string: ! '{"error":"Your token is invalid","status":401}'
+    http_version: 
+  recorded_at: Wed, 10 Jul 2013 02:26:16 GMT
 recorded_with: VCR 2.4.0
