--- a/spec/fixtures/vcr_cassettes/conversion_all_not_authorized.yml
+++ b/spec/fixtures/vcr_cassettes/conversion_all_not_authorized.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:5000/api/users.json?api_token=51d5fc191b2b95f9278becf6b51fa347
+    uri: http://localhost:5000/api/conversions.json?api_token=123&page=1&per=20
     body:
       encoding: US-ASCII
       string: ''
@@ -15,8 +15,8 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 401
+      message: Unauthorized
     headers:
       X-Frame-Options:
       - SAMEORIGIN
@@ -32,20 +32,17 @@ http_interactions:
       - strict-origin-when-cross-origin
       Content-Type:
       - application/json; charset=utf-8
-      Etag:
-      - W/"0d66b13e67af61ea36799ae5e7c780f1"
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       X-Request-Id:
-      - 8d6cd7e4-5ab9-414e-a35b-bc52a27ad8f2
+      - 6f8608e9-c3ee-4991-9d1f-69b6c377cb6d
       X-Runtime:
-      - '0.031059'
+      - '0.005255'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"id":"3d96a094-dde5-4319-b5fb-bb87aabc7b0e","email":"test@test.com","plan":{"name":"free","max_file_size_in_mb":3,"conversions_per_month":50,"max_requests_per_second":1},"time_zone":"Eastern
-        Time (US \u0026 Canada)","subscription":{"billing_cycle_started":"2018-07-09T21:21:55.000+00:00","billing_cycle_ends":"2018-08-09T21:21:55.000+00:00","stats":{"conversions_left":0,"successful_conversions":50,"failed_conversions":0,"processing_conversions":0}}}'
+      string: '{"errors":["unauthorized"]}'
     http_version: 
-  recorded_at: Tue, 10 Jul 2018 00:48:08 GMT
+  recorded_at: Tue, 10 Jul 2018 01:34:00 GMT
 recorded_with: VCR 4.0.0
